[package]
name = "calculator"
version = "0.19.9"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
build = "build.rs" # <-- We added this and everything after!
workspace = "../.."
edition = "2018"

[build-dependencies.lalrpop]
version = "0.19.9"
path = "../../lalrpop"
features = ["lexer"]

[dependencies]
regex = "1"

[dependencies.lalrpop-util]
version = "0.19.9"
path = "../../lalrpop-util"
