[package]
name = "lalrpop-snap"
version = "0.12.0" # LALRPOP
description = "snapshot of LALRPOP for use in bootstrapping"
repository = "https://github.com/nikomatsakis/lalrpop"
license = "Apache-2.0/MIT"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
# build = "build.rs"

[dependencies]
atty = "0.1.2"
bit-set = "0.3.0"    
bitflags = "0.4.0"
diff = "0.1"
docopt = "0.6"
itertools = "0.3"
regex = "0.1"
regex-syntax = "0.2"
petgraph = "0.1.11"
rustc-serialize = "0.3"
term = "0.4.4"
unicode-xid = "0.0.2"

[dev-dependencies]
rand = "0.3"

[dependencies.lalrpop-util]
path = "../lalrpop-util"
version = "0.12.0" # LALRPOP

[dependencies.lalrpop-intern]
path = "../lalrpop-intern"
version = "0.12.0" # LALRPOP
