[package]
name = "lalrpop-snap"
version = "0.12.5" # LALRPOP
description = "snapshot of LALRPOP for use in bootstrapping"
repository = "https://github.com/nikomatsakis/lalrpop"
license = "Apache-2.0/MIT"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
# build = "build.rs"
workspace = ".."

[dependencies]
atty = "0.1.2"
bit-set = "0.4.0"
bitflags = "0.8.0"
diff = "0.1.9"
docopt = "0.7"
itertools = "0.5.9"
regex = "0.2.1"
regex-syntax = "0.2"
petgraph = "0.3.2"
rustc-serialize = "0.3"
term = "0.4.5"
unicode-xid = "0.0.4"

[dev-dependencies]
rand = "0.3"

[dependencies.lalrpop-util]
path = "../lalrpop-util"
version = "0.12.5" # LALRPOP

[dependencies.lalrpop-intern]
path = "../lalrpop-intern"
version = "0.12.5" # LALRPOP
