[package]
name = "lalrpop-snap"
version = "0.13.1" # LALRPOP
description = "convenient LR(1) parser generator"
repository = "https://github.com/nikomatsakis/lalrpop"
readme = "../README.md"
keywords = ["parser", "generator", "LR", "yacc", "grammar"]
license = "Apache-2.0/MIT"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
# build = "build.rs"
workspace = ".."

[lib]
doctest = false

[dependencies]
ascii-canvas = "1.0"
atty = "0.1.2"
bit-set = "0.4.0"
diff = "0.1.9"
docopt = "0.7"
ena = "0.5"
itertools = "0.5.9"
regex = "0.2.1"
regex-syntax = "0.4.0"
petgraph = "0.4.4"
rustc-serialize = "0.3"
term = "0.4.5"
unicode-xid = "0.0.4"

[dev-dependencies]
rand = "0.3"

[dependencies.lalrpop-util]
path = "../lalrpop-util"
version = "0.13.1" # LALRPOP

[dependencies.lalrpop-intern]
path = "../lalrpop-intern"
version = "0.13.1" # LALRPOP
