[package]
name = "lalrpop-test"
build = "build.rs"
workspace = ".."

repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
diff.workspace = true
regex.workspace = true

[dependencies.lalrpop-util]
path = "../lalrpop-util"

[build-dependencies.lalrpop]
path = "../lalrpop"
features = ["lexer"]

[features]
default = ["test-set"]
test-set = []
