[package]
name = "lalrpop-test"
workspace = ".."

repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[build-dependencies.lalrpop]
path = "../lalrpop"

[dependencies]
diff.workspace = true

[dependencies.lalrpop-util]
path = "../lalrpop-util"
features = ["lexer", "unicode"]

[features]
default = ["test-set"]
test-set = []
