[package]
name = "lalrpop-test"
workspace = ".."
publish = false

repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[build-dependencies.lalrpop]
path = "../lalrpop"

[dependencies]
diff.workspace = true

[dependencies.lalrpop-util]
path = "../lalrpop-util"
features = ["lexer", "unicode"]

[dev-dependencies]
criterion = "0.5"

[dev-dependencies.lalrpop]
path = "../lalrpop"

[[bench]]
name = "lalrpop_benchmark"
harness = false
