[package]
name = "lalrpop"
description = "convenient LR(1) parser generator"
readme = "README.md"
workspace = ".."
default-run = "lalrpop"

repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

exclude = ["build.rs"]

[lib]
doctest = false

[dependencies]
# This dependency is only needed for binary builds, if you use LALRPOP as
# library, disable it in your project by setting default-features = false.
lalrpop-internals = { path = "../lalrpop-internals", version = "1.0", default-features = false }

pico-args = { version = "0.5", default-features = false, optional = true }

[features]
default = ["lexer", "unicode", "pico-args"]
unicode = ["lalrpop-internals/unicode"]
lexer = ["lalrpop-internals/lexer"]

[package.metadata.docs.rs]
features = ["lexer"]

[[bin]]
name = "lalrpop"
required-features = ["pico-args"]
