[package]
name = "calculator"
version = "0.22.1"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
workspace = "../.." # <-- We added this and everything after!
edition = "2021"
publish = false

[build-dependencies]
lalrpop = { version = "0.22.1", path = "../../lalrpop" }

[dependencies]
lalrpop-util = { version = "0.22.1", path = "../../lalrpop-util", features = [
    "lexer",
    "unicode",
] }
