[package]
name = "calculator"
version = "0.22.2"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
workspace = "../.." # <-- We added this and everything after!
edition = "2024"
publish = false

[build-dependencies]
lalrpop = { version = "0.22.2", path = "../../lalrpop" }

[dependencies]
lalrpop-util = { version = "0.22.2", path = "../../lalrpop-util", features = [
    "lexer",
    "unicode",
] }
