[package]
name = "calculator"
version = "0.23.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
workspace = "../.." # <-- We added this and everything after!
edition = "2024"
publish = false

[build-dependencies]
lalrpop = { version = "0.23.0", path = "../../lalrpop" }

[dependencies]
lalrpop-util = { version = "0.23.0", path = "../../lalrpop-util", features = [
    "lexer",
    "unicode",
] }
