[package]
name = "cfg"
version = "0.23.1"
authors = ["Mathis Brossier <mathis.brossier@gmail.com>"]
workspace = "../.." # <-- We added this and everything after!
edition = "2024"
publish = false

[build-dependencies]
lalrpop = { version = "0.23.1", path = "../../lalrpop" }

[dependencies]
lalrpop-util = { version = "0.23.1", path = "../../lalrpop-util", features = [
    "lexer",
] }

[features]
default = ["test-set"]
test-set = []
test-not-set = []
test-set2 = []
