[package]
name = "lexer"
version = "0.1.0"
edition = "2021"
authors = ["Patrick LaFontaine <32135464+Pat-Lafon@users.noreply.github.com>"]
publish = false

[build-dependencies]
lalrpop = { version = "0.22.0", path = "../../lalrpop" }

[dependencies]
lalrpop-util = { version = "0.22.0", path = "../../lalrpop-util", features = [
    "unicode",
] }
logos = "=0.14.2"

[features]
default = []
bit = []
