[package]
name = "lexer"
version = "0.1.0"
edition = "2024"
authors = ["Patrick LaFontaine <32135464+Pat-Lafon@users.noreply.github.com>"]
publish = false

[build-dependencies]
lalrpop = { version = "0.23.0", path = "../../lalrpop" }

[dependencies]
lalrpop-util = { version = "0.23.0", path = "../../lalrpop-util", features = [
    "unicode",
] }
logos = "0.15.1"

[features]
default = []
bit = []
