[package]
name = "nobol"
version = "0.1.0"
edition = "2021"
authors = ["Felix S Klock II <pnkfelix@pnkfx.org>"]
workspace = "../.."
publish = false

[build-dependencies]
lalrpop = { version = "0.22.1", path = "../../lalrpop" }

[dependencies]
lalrpop-util = { version = "0.22.1", path = "../../lalrpop-util", features = [
    "lexer",
    "unicode",
] }
