[package]
name = "pascal"
version = "0.11.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2021"

[build-dependencies]
lalrpop = { version = "0.20.1", path = "../../../lalrpop" }

[dependencies]
pico-args = "0.5"

[dependencies.lalrpop-util]
version = "0.20.1"
path = "../../../lalrpop-util"
features = ["lexer"]
