[package]
name = "pascal"
version = "0.11.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2024"
publish = false

[build-dependencies]
lalrpop = { version = "0.22.2", path = "../../../lalrpop" }

[dependencies]
pico-args = "0.5"

[dependencies.lalrpop-util]
version = "0.22.2"
path = "../../../lalrpop-util"
features = ["lexer"]
